Improving the output folder directory structure